--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -172,7 +172,7 @@ This means that we will only consider users which $u \in EU_{1}^{\complement}$ a
 			Y_u =
 			\begin{cases}
 				& 1 \ \mbox{if} \ u \in ( EU_{0} \cap { EU_{1} }^{\complement})    \\
-				& 0 \ \mbox{if not}.
+				& 0 \ \mbox{if} \ u \in ( { EU_{1} }^{\complement} / EU_{0}).
 			\end{cases}
 		\end{align*}
 \end{problem}
