init appendix and rename section

--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -8,7 +8,7 @@
 
 \chapter{Introduction}\label{ch:introduction}
 
-\section{Structure of the Thesis}
+\section{Thesis Structure}
 
 \todo{Extend intro of all concepts in paper: what are we doing, what is chagas, migrations, CDRs, parasites, epidemics, machine learning, and a comment on what will be done on further chapters.}
 
