--- a/main.tex
+++ b/main.tex
@@ -29,9 +29,7 @@
   \include{preface}
   \tableofcontents
 
-
-
-  \mainmatter
+%  \mainmatter
   \include{ch_introduction}
   \include{ch_descriptions_risk}
   \include{ch_machine_learning}
@@ -42,6 +40,9 @@
 \backmatter
 	\printbibheading[heading=bibbook]
 	\bibbysection[heading=subbib]
+	
+\mainmatter
+\include{appendix}
   % \printindex
 \end{document}
 
