--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -16,48 +16,52 @@ ther texts were also used, and they have been duly cited in the thesis.
 here not specified, the reader can assume that the proof is based from the above mentioned textbooks.
 
 
-\section{Supervised Classification Problems}\label{section-supervised-learning}
+\section{Overview of Supervised Classification Applications}\label{section-supervised-learning}
 
 
 Machine Learning is divided into two main categories: Supervised and Unsupervised Learning.
-et $Y \in \mathbb{R}^n$ be the outputs of the model and $X \in \mathbb{R}^{n \times p}$ be the inputs: supervised learning algorithms produce outputs from input data i.e.\ for each instance $n$, the computer has access to examples of outputs and tries to reproduce them based on information contained in $X$.
-n this context, the algorithm is generally referred to as a \textit{learner}.
+If we consider $Y \in \mathbb{R}^n$ be the outputs of the model and $X \in \mathbb{R}^{n \times p}$ be the inputs: supervised learning algorithms produce outputs from input data i.e.\ for each instance $n$, the computer has access to examples of outputs and tries to reproduce them based on information contained in $X$.
+In this context, the algorithm is generally referred to as a \textit{learner}.
 
-The second class of problems is where the output $Y$ is missing altogether from the data.
-n this scenario the most common objectives are clustering samples, density estimation and data compression.
-inear regression and K-means clustering are examples of algorithms in each of these categories respectively.
-
+The second class of problems is where the output $Y$ is missing altogether from the available data. 
+In this scenario the most common objectives are clustering samples, density estimation and data compression.
+Linear regression and K-means clustering are examples of algorithms in both categories respectively.
 
 In supervised learning, tasks can be sub-categorized by the nature of the problem.
-Then the type of the output variable $Y$ takes a (generally \textit{small}) discrete set of values, then it is said that it is a supervised \textit{classification} problem.
-In the other hand, when the output takes continuous (or dense in an open set of $\mathbb{R}$) range of \textit{quantitative} values, the problem is said to be of supervised \textit{regression}.
+If the type of the output variable $Y$ takes a (generally \textit{small}) discrete set of values, then it is said that it is a supervised \textit{classification} problem.
+On the other hand, when the output takes continuous (or dense in an open set of $\mathbb{R}$) range of \textit{quantitative} values, it is said to be supervised \textit{regression} problem.
 Note that regression problems can be encoded into classification problems by grouping the output values into categories by taking ranges of output values.
 
-Suppose our aim is to predict $y$ given a new sample $x$.
-In supervised regression problems, $y$ will comprise a continuous variable.
+Now suppose our aim is to predict $y$ given a new sample $x$.
+So we have that for supervised regression problems, $y$ will comprise a continuous variable.
 On the other hand for classification problems $y$ will represent a label for a certain class.
-For the case of $K$ classes, $y$ most commonly takes values in the ranges $0$ through $K-1$ or $1$ through $K$.
+For the case of $K$ classes, we can note that $y$ takes values in the ranges $0$ through $K-1$ or $1$ through $K$.
 In both cases, the joint probability distribution $p(X, Y)$, called the \textit{true} distribution, gives all the information we need on these two variables.
-But the values of this probability is most often unknown.
-The idea is to use estimations and inference on the most likely values for new samples and take decisions with the information at hand.
+Yet the characterization of this probability is most often unknown.
+
+The idea is to use estimations and predictions on the most likely values for new samples and take decisions with past information.
 These decisions will be based on the most probabilistic characterization of the data we have.
-In this work we will focus on the classification aspect of machine learning.
+For this work we will focus on the classification aspect of machine learning.
 
-In these type of problems the theoretical and the computational aspects are both of interest.
-The algorithms used need to consider the technical requirements of the software and hardware at hand, as well as the time or resource constraints imposed by the problem setting.
-As such, they are expected to be executed in a reasonable amount of time, imposed by the task specification, and limited by the computing power available.\footnote{Here the word \textit{reasonable} is used in a broad sense.
+We also note that when dealing with these problems, the theoretical and the computational aspects are both of interest. 
+The data taken as input limits the available solutions. 
+The same goes for the algorithms used in the solution process.
+These need to take into consideration aspects such as the software and hardware available, as well as time or resource constraints imposed by the problem itself. 
+As such, these are expected to be executed in a reasonable amount of time, required by the task's specification, and limited by the computing power available.\footnote{Here the word \textit{reasonable} is used in a broad sense.
 It will depend entirely on time constraints, computational capacity, usage and other aspects of each learning application.} There can be problems which require that the algorithm output predictions in \textit{real-time}, to the resolution of milliseconds.
-Picture a system where a credit-card transaction needs to be approved or labeled as a fraud.
-ere the system needs to respond in short time if the transaction is fraudulent.
 
-Other use cases might require the system to process a big volume of data at once, not a single event, but a batch of these and output this answer.
-The system in use needs to be prepared to run \textit{lean} with a big inflow of data, without overloading the hardware capacity.
+For example, if we picture a system where credit-card transactions need to be approved or labeled as a fraud, we would expect the system needs to quickly respond if the transaction is approved or not. 
+Other use cases might require the system to process a big volume of data at once, not a single event, but a batch of these and output this answer. 
+The production system needs to be prepared to run \textit{lean} with a big inflow of data, without overloading the hardware capacity.
+
 These examples show that for a given problem, multiple algorithms are available to use but while all of them are theoretically doing the same task, we must also consider the practical advantages of these.
-omputational efficiency and \textit{scalability} are relevant when working with these problems.
-Even though we won't delve into these aspects in this work, it has an important consideration in the application of Machine Learning solutions.
+Computational efficiency and \textit{scalability} are relevant when working with these problems.
+Even though we won't delve into these aspects in this work, it has an important consideration in practicing Machine Learning. \
+And these also influence the way research is conducted in this area.
 
 
-In its essence, a machine learning method is a probabilistic model built from data so it is very similar to a statistical model.
+In its essence, a machine learning method is a probabilistic model built from data. 
+In this way it is very similar to a statistical model.
 However, it differs specially in that its focus is generally on the models' predictive abilities more than in the model's parameters estimates~\textcite{breiman-statisticalmodeling}.
 The algorithms will be built and used for a given phenomena, to try and replicate it as best as possible without really identifying the true nature of the mechanisms behind this phenomena.
 As such, most applications will try to \textit{imitate} the task's behavior rather than try to identify the real system behind it.
@@ -71,17 +75,21 @@ Where we can, we will be identifying these differences along the text.
 As a start, the \textit{dependent} $Y$ is called the target or label and the \textit{independent} variables, \textit{covariates} or \textit{input variables} are named \textit{features} in this case.
 %Labels that are representing categorical or discrete variables are also named factors or \textit{qualitative} variables.
 
-\section{Supervised Classification of Long-term Human Migrations}\label{long_term}
+\section{Long-term Human Migrations Classification}\label{long_term}
 
-Given the dataset we have described in \cref{ch:descr-risk} and the nature of our problem, we develop here a set of machine learning problems that will aid us in further characterizing the mobility of users in the analysis of CDRs that span a two year time period.
+Starting from the two-year CDR dataset we have described in \cref{ch:descr-risk}, we present our set to find how to tackle the problem with supervised classification tools.
 
-This will help us establish to what extent the CDRs allow us to predict a user's past home and migration movement across both endemic and non-endemic regions.
+It is convenient to do so given the nature of our problem. 
+Here we intend to develop a set of machine learning methods that will aid us in further characterize and analyze the mobility of users between regions.
+
+These will help us establish to what extent the CDRs allow us to predict a user's past home and migration movement across both endemic and non-endemic regions.
 More precisely, we would like to explore the relationship of the dataset attributes based on calling patterns across regions to the movement of humans.
 Where possible, we would like to establish which features are most relevant for our predictors.
 % In an ideal case, we would like to have a certain inisght into the causes of these movements, without being able to make any causal inferences.
 
-To help us with this, let us introduce some notation to describe sets of users.
-To start off building attributes from the data, each week is divided into time periods:
+To start off, we need to introduce some notation to describe sets of users.
+To do so, we divide the users into distinct sets, marked by their attributes across each time period:
+
 \begin{definition}\label{def:endemic_sets_periods}
 	(i) $EU_{1}$ are the users that lived in the endemic region in period $T_1$ while $EU_{0}$ are the users that lived in the past (period $T_0$);
 	(ii) their set complements are defined as ${ EU_1 }^{\complement}$ and ${ EU_0 }^{\complement}$ respectively and
@@ -92,19 +100,17 @@ To start off building attributes from the data, each week is divided into time p
 %We will have these can be differentiated for both periods by 
 
 
-Keeping the above in mind, we decided to divide our task into four problems.
-These will serve as different perspectives of the issue and all of them together give us a principled understanding of the problem.
+Keeping the above in mind, we divide our task into four problems.
+These will serve as different perspectives of the mobility issue and all of them together will give us a principled understanding of the problem.
 
-All problems are solved with user data extracted from their communications during $T_1$, whilst no information from $T_0$ will be used as input to the statistical models.
+It is important to note that all problems are solved with user data extracted from their communications during $T_1$, whilst no information from $T_0$ will be used as input to the statistical models.
 
-We process the raw data to build our target variable which will be determined as $Y$ which will be defined for every user $u$.
+We process the raw data to build our target variable which will be determined as $Y$ and it will be defined for every user $u$.
 Then the only difference among all of the problems will be in how the target variable is defined\footnote{In reality, certain variations of the data were considered too, where best performing features were filtered from the dataset to explore how this decreased the overall prediction ability of the algorithm.}.
 
 
-We present here the list of problems considered in this work are defined in the following way:
+We define here the list of problems considered in this work in the following way:
 
-
-\todo{Correctly define H0 and H1 and correctly tune the problems, correctly describe the universe of users.}
 
 \begin{problem}\label{target1}
 We want to infer which users lived in the endemic region in the past:
