add reference to occam

--- a/biblio.bib
+++ b/biblio.bib
@@ -43,6 +43,27 @@
  address = {Secaucus, NJ, USA},
 }
 
+@Inproceedings { rasmussenGhahramani2001occamsRazor,
+   title = {Occam's Razor},
+   year = {2001},
+   month = {4},
+   pages = {294-300},
+   abstract = {The Bayesian paradigm apparently only sometimes gives rise to Occam's Razor; at other times very large models perform well. We give simple examples of both kinds of behaviour. The two views are reconciled when measuring complexity of functions, rather than of the machinery used to implement them. We analyze the complexity of functions for some linear in the parameter models that are equivalent to Gaussian Processes, and always find Occam's Razor at work.},
+   url = {http://www.kyb.tuebingen.mpg.de/fileadmin/user_upload/files/publications/pdf2215.pdf},
+   web_url = {http://books.nips.cc/nips13.html},
+   editor = {Leen, T.K. , T.G. Dietterich, V. Tresp},
+   publisher = {MIT Press},
+   address = {Cambridge, MA, USA},
+   booktitle = {Advances in Neural Information Processing Systems 13},
+   institute = {Biologische Kybernetik},
+   organization = {Max-Planck-Gesellschaft},
+   event_place = {Denver, CO, USA},
+   event_name = {Fourteenth Annual Neural Information Processing Systems Conference (NIPS 2000)},
+   ISBN = {0-262-12241-3},
+   author = {Rasmussen, CE and Ghahramani, Z}
+}
+
+
 @InProceedings{ McKinney-pandas,
   author    = { Wes McKinney },
   title     = { Data Structures for Statistical Computing in Python },
